--- a/familymapserver/build.gradle
+++ b/familymapserver/build.gradle
@@ -1,7 +1,8 @@
 apply plugin: 'java'
 
 dependencies {
-    compile fileTree(dir: 'libs', include: ['*.jar'])
+    compile fileTree(include: ['*.jar'], dir: 'libs')
+    compile files('src/main/java/sqlite-jdbc-3.20.0.jar')
 }
 
 sourceCompatibility = "1.7"
