--- a/familymapserver/build.gradle
+++ b/familymapserver/build.gradle
@@ -2,7 +2,11 @@ apply plugin: 'java'
 
 dependencies {
     compile fileTree(include: ['*.jar'], dir: 'libs')
-    compile files('src/main/java/sqlite-jdbc-3.20.0.jar')
+    compile files('src/main/java/gson-2.6.2.jar')
+    compile files('src/main/java/sqlite-jdbc-3.7.2.jar')
+    compile files('src/main/java/json-20160212.jar')
+    compile files('src/main/java/hamcrest-core-1.3.jar')
+    compile files('src/main/java/junit-4.12.jar')
 }
 
 sourceCompatibility = "1.7"
